--- a/Android/app/src/main/res/layout/activity_game.xml
+++ b/Android/app/src/main/res/layout/activity_game.xml
@@ -36,7 +36,7 @@
         android:gravity="center_horizontal">
         <TextView
             android:id="@+id/pepper_text"
-            android:text="PepperId"
+            android:text="@string/default_string"
             android:textSize="15dp"
             android:textColor="@color/colorAccent"
             android:layout_width="wrap_content"
@@ -44,14 +44,14 @@
             android:layout_marginBottom="10dp"/>
         <TextView
             android:id="@+id/hint_text"
-            android:text="Hint"
+            android:text="@string/default_string"
             android:textSize="20dp"
             android:textColor="#FF69B4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <TextView
             android:id="@+id/answer_text"
-            android:text="_ _ _ _ _"
+            android:text="@string/default_string"
             android:textSize="45dp"
             android:textColor="@color/pink_light"
             android:layout_width="wrap_content"
@@ -261,23 +261,11 @@
                     android:text="Z"/>
             </LinearLayout>
         </LinearLayout>
-        <TextView
-            android:id="@+id/result_text"
-            android:text=""
-            android:textSize="20dp"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginBottom="10dp"/>
         <LinearLayout
             android:layout_marginTop="10dp"
             android:orientation="horizontal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
-            <Button
-                android:text="sound"
-                android:id="@+id/sound_toggle"
-                android:layout_width="0dp"
-                android:layout_height="0dp" />
             <Button
                 android:background="@drawable/bell_btn"
                 android:id="@+id/vibrationBtn"
@@ -290,11 +278,6 @@
                 android:layout_marginLeft="20dp"
                 android:layout_width="37dp"
                 android:layout_height="40dp" />
-            <Button
-                android:text="pop"
-                android:id="@+id/popBtn"
-                android:layout_width="0dp"
-                android:layout_height="0dp" />
 
         </LinearLayout>
     </LinearLayout>
